--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "axios": "^1.7.7",
     "express": "^4.21.1",
+    "highlight.js": "^11.10.0",
     "sass-embedded": "^1.81.0",
-    "vue": "^3.5.12"
+    "splitpanes": "^3.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
